infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            containers:
                -   name: auth
                    image: stoyanov1234/ticketing-auth
