infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration-redis-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expiration-redis
    template:
        metadata:
            labels:
                app: expiration-redis
        spec:
            containers:
                -   name: expiration-redis
                    image: redis
