infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orders-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: orders
    template:
        metadata:
            labels:
                app: orders
        spec:
            containers:
                -   name: orders
                    image: stoyanov1234/ticketing-orders
