infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orders-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: orders-mongo
    template:
        metadata:
            labels:
                app: orders-mongo
        spec:
            containers:
                -   name: orders-mongo
                    image: mongo:4
