infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: payments-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: payments
    template:
        metadata:
            labels:
                app: payments
        spec:
            containers:
                -   name: payments-depl
                    image: stoyanov1234/ticketing-payments
