infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tickets
    template:
        metadata:
            labels:
                app: tickets
        spec:
            containers:
                -   name: tickets
                    image: stoyanov1234/ticketing-tickets
