infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tickets-mongo
    template:
        metadata:
            labels:
                app: tickets-mongo
        spec:
            containers:
                -   name: tickets-mongo
                    image: mongo:4
