infra/k8s/auth-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: auth-clusterip-srv
spec:
    selector:
        app: auth
    type: ClusterIP
    ports:
        - name: auth
          protocol: TCP
          port: 3000
          targetPort: 3000
