infra/k8s/auth-mongo-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: auth-mongo-clusterip-srv
spec:
    selector:
        app: auth-mongo
    type: ClusterIP
    ports:
        - name: db
          protocol: TCP
          port: 27017
          targetPort: 27017
