infra/k8s/client-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-clusterip-srv
spec:
    selector:
        app: client
    type: ClusterIP
    ports:
        - name: client
          protocol: TCP
          port: 3000
          targetPort: 3000
