infra/k8s/expiration-redis-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: expiration-redis-clusterip-srv
spec:
    selector:
        app: expiration-redis
    type: ClusterIP
    ports:
        - name: db
          protocol: TCP
          port: 6379
          targetPort: 6379
