infra/k8s/nats-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: nats-clusterip-srv
spec:
    selector:
        app: nats
    type: ClusterIP
    ports:
        - name: client
          protocol: TCP
          port: 4222
          targetPort: 4222
        - name: monitoring
          protocol: TCP
          port: 8222
          targetPort: 8222
