infra/k8s/orders-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: orders-clusterip-srv
spec:
    selector:
        app: orders
    type: ClusterIP
    ports:
        - name: orders
          protocol: TCP
          port: 3000
          targetPort: 3000
