infra/k8s/orders-mongo-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: orders-mongo-clusterip-srv
spec:
    selector:
        app: orders-mongo
    type: ClusterIP
    ports:
        - name: db
          protocol: TCP
          port: 27017
          targetPort: 27017
