infra/k8s/payments-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: payments-clusterip-srv
spec:
    selector:
        app: payments
    type: ClusterIP
    ports:
        - name: payments
          protocol: TCP
          port: 3000
          targetPort: 3000
