infra/k8s/tickets-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: tickets-clusterip-srv
spec:
    selector:
        app: tickets
    type: ClusterIP
    ports:
        - name: tickets
          protocol: TCP
          port: 3000
          targetPort: 3000
