infra/k8s/tickets-mongo-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: tickets-mongo-clusterip-srv
spec:
    selector:
        app: tickets-mongo
    type: ClusterIP
    ports:
        - name: db
          protocol: TCP
          port: 27017
          targetPort: 27017
