infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: ticketing.dev
          http:
              paths:
                  - path: /api/users/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: auth-clusterip-srv
                            port:
                                number: 4000
                  - path: /api/orders/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: orders-clusterip-srv
                            port:
                                number: 3000
                  - path: /api/tickets/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: tickets-clusterip-srv
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client-clusterip-srv
                            port:
                                number: 3000
